# ChangeLog for app-text/calibre
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.319 2014/05/13 14:54:59 axs Exp $

*calibre-1.36 (13 May 2014)

  13 May 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> +calibre-1.36.ebuild,
  -calibre-1.35.ebuild:
  version bump

*calibre-1.35 (03 May 2014)

  03 May 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> +calibre-1.35.ebuild,
  -calibre-1.34.ebuild, -files/calibre-1.34-C-locale.patch:
  version bump ; removed bundled beautifulsoup to ensure usage of system-
  installed dependency

  01 May 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +files/calibre-1.34-C-locale.patch,
  +files/calibre-1.34-no_updates_dialog.patch, calibre-1.34.ebuild:
  added conditional to not throw exception when locale is 'C', bug 508834;
  cleaned up no-dialog patch

*calibre-1.34 (01 May 2014)

  01 May 2014; Ben de Groot <yngwin@gentoo.org> +calibre-1.34.ebuild,
  -calibre-1.33.ebuild:
  version bump; update dependencies (bug #508280)

  25 Apr 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> metadata.xml:
  added self to maintainers list

*calibre-1.33 (20 Apr 2014)

  20 Apr 2014; Ben de Groot <yngwin@gentoo.org> +calibre-1.33.ebuild:
  Version bump (bug #507606)

*calibre-1.29 (21 Mar 2014)

  21 Mar 2014; Ben de Groot <yngwin@gentoo.org> +calibre-1.29.ebuild,
  calibre-1.20.ebuild, calibre-1.25.ebuild:
  version bump, with slight sed change submitted by Mikhail in bug #504868

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> calibre-1.20.ebuild:
  Stable for x86, wrt bug #502198

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> calibre-1.20.ebuild:
  amd64 stable, bug #502198

*calibre-1.25 (23 Feb 2014)

  23 Feb 2014; Ben de Groot <yngwin@gentoo.org> +calibre-1.25.ebuild,
  -calibre-1.12.ebuild, -calibre-1.14.ebuild:
  version bump, remove old

*calibre-1.20 (18 Jan 2014)

  18 Jan 2014; Ben de Groot <yngwin@gentoo.org> +calibre-1.20.ebuild,