@@ -12,17 +12,19 @@ DIST calibre-1.20.0.tar.xz 32430560 SHA256 475e09b1be4b9977240cbbe6743ab79da4b1f
 DIST calibre-1.25.0.tar.xz 32683456 SHA256 cd95f64b721c6e7d0f392a7fce2c177bc8e1dec6a367891b3582e0b74b0e42f8 SHA512 fde5abbff3c4785160aa6286a8a50ae80ebf97a262b6902d6158648ba08c6d030e6031ced168131891d4cc7c291c74b6c3c7ce72be23c62c2dd783f47f0473b4 WHIRLPOOL f3cd373e8dbdfaff2d9e00cb7449916b0c6d2ae4530466ce1e98c8e5cb91e667db2a19952a11d5d35c044d6eb6804fc583d584753bec708560544e75c299aaf0
 DIST calibre-1.29.0.tar.xz 33022868 SHA256 b9cc2081528b72d7082e15efbc75b4edccf3e504d30697886bf23da4fa834faa SHA512 17a1e83c610122ef1bd0e4e0162bd907eec17fe7b012fb5476d3eb3d7e65df6d7b3e609d4b32cd6489fcddbfc55ac521b0e5f88d7cc2b2ccbf5f566e53c2f126 WHIRLPOOL e4501c9ed09b27853158c7485304c30be3cf4e1223ed5950d6d2ad1fb193941ea9a4ba4e1c7b37efe8252439993d51d15efaeadb190e5a3f25fe36455ff7a33b
 DIST calibre-1.36.0.tar.xz 34023596 SHA256 4e4f0a6ba851c795e0d7d88fbf08c84a637f245d1aaa5bb13b177da5a6081d57 SHA512 3a22542de829a1b8ddfab9269760ee5a33baf5a2d69fe171d099e244489b3146c1045abf3119182aa7b57c6d0e01f637dc337e6d6a696c61d99544be0935a9cf WHIRLPOOL 737348af7b2a3545b299bf659b8d0256340ec774178eb8a6c72ac672314145c7e53f7180c1785c78e2293b32afaebb243d6d3dc549b405a6837ebe819745a8ae
+DIST calibre-1.37.0.tar.xz 34093504 SHA256 d9168b9c46650052694ea5ab94c346db1760e24f61d18d5c98450e5b2069091d SHA512 77ce7a918b6bd7bc09f4f456b59c9bef556032d13db0bcb937dbb601666c2de933203a7798a3283c6ed6e47b41e3b9ca949c2f63c9c50e7810aacf51a9e9ac41 WHIRLPOOL c70d9ec41105b0099f79da13adbe460299bcf39b736eadcbcb5be27994a332845de967d70c4e70296f8e52bcce7d6440124e1bc5d3a60f1d40d5236b9c442927
 EBUILD calibre-1.2.ebuild 7188 SHA256 90113b51d09bd3ab231eeceae07d4aae5f8ebd37ceac16525ec51184f39c294c SHA512 3fea7182ff45399da37eafa5e1b8ec9d86bbdd21e1e2a4559d12cedd8028f23313662b9f7b833dfd51f34b13f6320f5db040bca681ce580ef890b1c84a8c18c2 WHIRLPOOL 381ae7dc0ea326d08d94ef3016147d639755c645d928b4830dd8dc655e3dd3eec5cfe71b517831a63fcc48e688cf1eff0e95af0b38e51efac9b9f9b7ca1248b2
 EBUILD calibre-1.20.ebuild 6829 SHA256 97305bb462ce1af08b20a77ff1a27432e52c3d8f05e84c267649badf4a2c59cc SHA512 bec3b0e1bebe234f5bac4782e3c35d0237d6cd5561f3897c049a2c7e0d7e9c1a181897eb1741609cd1386a2594d579142f3a0e6b6045183163d5b0009c5a6b4d WHIRLPOOL 538238eebdf55ad11e3c6e72154e999bf90d17fcb916daf1c3cf0a37f3d3604e16f267707114b99bab1d884c1fe9e790354b02f1c940c72b713459a844eda3e0
 EBUILD calibre-1.25.ebuild 6834 SHA256 fccd4b963ae6a6a2a687566bba722f877f0f5b9b19203420ef181e13c4256cb1 SHA512 197844df92e82346747a6189d04d1a0df4c111c7549bc524ef6dfde7db08dc52147840e1340c738e0c58d81f281f3540c94159cfdb50e2c15dbf8bd1274a8995 WHIRLPOOL a77d7de048579c1d539c9af8583860fea880e21416b40f91591d7aaf7d10a2ed13580b52252a959d8d658f4de45669ee2512d209d7563956ee081c5d9376d644
 EBUILD calibre-1.29.ebuild 6845 SHA256 8b62380e75238694b459a4ab9d40139229a3dd1a09b2018dc8bb6315248ad362 SHA512 67f7d77a509be8d1bfbe1ce04a6e9959f259dd7da71f1023548806ff229ebcb23f95e55fc27e6e41c76aa0d51c3816433fe85f7ec83d82bdeb33c3ec6114aa5f WHIRLPOOL 1158539fadd0fc494c2eaefc496269b77a1d4043bd8d8bdb2a6dd269c4fbb4fe458ae564c22c8df29b362b167ee6956290fdd986182078466f1e41424cc7c299
 EBUILD calibre-1.36.ebuild 7636 SHA256 e2a3a4568159471d415e5dec4a56773267bc231b8ae95bf4dc6d40c6671d3339 SHA512 fbd494f2ada5f01d35812f4eb2d1428105cc322280f54092d0ddf87f85057c954bbe2d58903fbecf7f9ae2e88682a287f8398fc088ad0dad6a8e1a183ded6162 WHIRLPOOL 93130fa64eec06ce5c65b47fc5806550a33b2d834b881da65d8bec803e37635213a9be8a8ddc1f6bbb36b8d24dbdea1b67665db345e6c5f884ce5dd342415dbf
-MISC ChangeLog 50867 SHA256 4657c020ed41e18b99408a8c92a7ade5ce0ba79bd0837ccf2a534b12c12fd08c SHA512 aa2668a3ef57e4fa5fc748beb16291b4af344a97bfc6011a0be16c8b27477f20bec07192fb6ee14565a0cf53737535ff4c0e7bac2197fed41488ac16ba10f23a WHIRLPOOL 62aed97ea5c06c8ecbc5a39444897cf947332a8741a1dc79395565c7698523761f87095fdb0563eab98dd64fbea6afbd2d2f1617a6189e2ae438226df001b304
+EBUILD calibre-1.37.ebuild 7636 SHA256 8d77b6a15d7eca7fc9100a8f9432e25ad731b2aa331577b1686e6af0ef896424 SHA512 8556f4344f96f133f7cc7545480559892711606504ff63bbcc94c63a6510d99073c6d2af901cc596cb4f3b1304ecf3a9ad158e4be301320388b95ef07d92b5d5 WHIRLPOOL 7a9ec0300ae58e93bde6af6904a8eccdc33378fc04eac10afa4d27cc04dbe968827a8efaae46fc2343c5303b85303604c242860da38a859fe554b4adf6ff220a
+MISC ChangeLog 50991 SHA256 53c2e239bcd430b132f3284ff97400562bfe7b971c0983f26d0cc9a000534154 SHA512 51431ebf82fdc13ab3a4cf19a836db961ef03ea97413713d54637ff64c9fe1673b65033e5bdecf7158d88d658a2d5de7b144af983b6971f6c296489c1d979b1e WHIRLPOOL 7f6097458a794673c53b3629e4c22e5b0bc03bf5cf8da476d263f5adfa364d031672a72e31f8967b0cd4a2ba89dff230f749587e46d5c7adb1f089b7c7c6ab87
 MISC metadata.xml 494 SHA256 8636a504a39b901333bfb9aa1c1322dde87ddc3fa6c6da3a7b95abcf25d61786 SHA512 c8e1bf8c46e3b3285df1cffa1324042a82d6a40dfbe5384d018386e661c446204bfbf24b21d7afe893ceb1e1de07719b84ad2af3345c04e4419141f8e789ca2c WHIRLPOOL 7d89476c21141740f9b27f947b722bd64004b6e705fe6ee35237f94ef318f626e49a5adad5ac0ab86d015913c3663d4bb80d9a9f4014bb3e139623eb0938179a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlNyMkYACgkQ2ugaI38ACPALNgD/WxG4K6OopQkEW65JhCrZCyd6
-F2Eh+B5XoANlMmconKgA/Rpt4vSbOS5C6cLrvwYRHnC7mCFacToOHZIyHrLPZnl9
-=fwa8
+iF4EAREIAAYFAlN7ZdwACgkQ2ugaI38ACPBoPAD/W4qJOW6dLWCfOtoJsJlYXZyF
+biot5O/9jiOAytqMqgABAKBN+zAugAItLwgQF+0RuubCfmAcniN/nlVV1qwzCTfR
+=jVWL
 -----END PGP SIGNATURE-----
