@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST SPARQLWrapper-1.5.2.tar.gz 24953 SHA256 65254c7c3cae093fbd5e6b65e2c725db3ad80ab7402c4aa59d18a9cb8f5695b4 SHA512 adb70599d5c67c4cbd5277de30325a993057ff50c72eba89cea6b5ba8daea9bd7717fef4cd62e250b77c818498580d7f26e359fc4a9e344b2ba82c71912fcee3 WHIRLPOOL a8231a0745e798240620f46af625ff325a770f97f100fbfa5cda4f2e8e1dd1f8b8900fae13a8ade9ba0f71a3fc714be14d83e34848479e7a4e93c7993a1b207c
+DIST SPARQLWrapper-1.6.0.tar.gz 20698 SHA256 dadcbf190dd090d90325ca4126e96f262d620c45c4693ee9f168cf39af2fa373 SHA512 e70a003807329602360e0c1ffc4091668e5a7bbce84305ecee5a381759500282abc57f39879a8372a35f7edd36bf7d4f2dc8efad717bb620e430d207c52a4754 WHIRLPOOL f76f9ebc20daac75f0cdbddccd7bb48695289829ab08d9e013ab2e9c0220a7bd770afd5dc1431d520369dd8a1c6cd96034c4452537fb50b58d41b36fa0eb7b20
 EBUILD sparql-wrapper-1.5.2.ebuild 733 SHA256 341a7ff29b2e9224f783ac1b70afdaa898fda9a0fa2fcd755c3aa9f915777dfc SHA512 378981df977ea4929ef78ab8ecc79609b7b11fa6fd88dd0247b6041afa4b329a8e1fdb8dec0d3f3a8b19e31cdfb1d615624bfd4f9c045ec4369689fefabecfa4 WHIRLPOOL c7798aa00e0e5bfaaaf0d232a30d3016e2bf1a0cf18cf55b3564f42b3b5d8d54140f2776f46f226a997f1e3ca3327ee4adfec14b1b39f7ce60e266cdfa6b65d2
-MISC ChangeLog 608 SHA256 c79f481f33ab902796b22980811cfcf801eb8ffcbe6dd8e867aca31c9fd5b859 SHA512 44db694a613622d29b8a3175bc19bd1d9df93cbc09d31288b01e1d24e7d26e752447e843e761b6aedf673903356b911cf252d1666675e679f7bc93c3dec480eb WHIRLPOOL 7b5c92e3a0174a4fa5acf1307ec1aae36ae9b5980d7719f8b9a11378695e1dc3a5c906249f520361d852680e8248d4b738e8b6a71fbd2c07a7c15fe895659b6e
+EBUILD sparql-wrapper-1.6.0.ebuild 729 SHA256 ad239e18f0e4824e91a016bb620462e186245bb11eeadbc2add05aba4478db7c SHA512 af8160b3a7541e0c056b47ef3f3a2678361414ad1e59e29bf8f6105fd0889cda0f59413c457fa81ea882e2d7c20aef0b2334f9c41449b3effa95efa1462c68b6 WHIRLPOOL 31519cc706e7f73ade6096d0eb27ac5ab37ada7e9f5c47f6b7d152efb9e43349b55d15043cc7e5da08cd8d8f4acf0585ddd612a6e79d3200f88ec0b63467b0f0
+MISC ChangeLog 782 SHA256 323ae07f0672c14ac325cad1b7dd5b68966ed41edd7c4defdbf8d2f1b125f736 SHA512 608a992b649150592b83ad7b80a4944da13682b29eee65787cf2ba8459fa9105e9cb2278f8e2275cadfe396f4eae31c41f474682dbb0ca9e8198753e8ae4dc4b WHIRLPOOL 218adef05f066cb74f8f880c1b747b850a8ea7f55f0a1034e7cb7d82f6b2757caaaaae8749ba7134abe23e09ce6fc9dd8b552e2f0ee0068f79698800b0fe150b
 MISC metadata.xml 241 SHA256 8ab13bbc905dce5fa3f407cf7a45a3635c18720f69c6d4c245b1a6257d4a8ea2 SHA512 15b9f226b8d332f64dfc3c78e8cfcdb8c5dbac49a471278379c06b9b192764ae2aec4efe41d2356a0ff211364592d03b419a42cbee4b3c26ab90fddb62db96ab WHIRLPOOL 4bd749053052f462862c3cd4cac83b82aa3cd6b3776e08d00531c185c2109e740b4236ddbcd8488dbcec21c0bdaf7f45a5f57b5573e2233bb9c1f81eda5722ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNV6wIACgkQso7CE7gHKw3DygCgnt2Lb8TWNFlDyWvEYeLNAf9m
-xxgAn0zeo5d1rnpgrHRRGriDA98p2VUo
-=2QE9
+iEYEAREIAAYFAlN7Yk4ACgkQso7CE7gHKw0vRQCgkluxBDbbKijh/lQpYXWdJl4b
+eSkAoNX96pdmaeKCzB3oxp9+bYzNNrxq
+=eWqE
 -----END PGP SIGNATURE-----
