@@ -1,0 +1,13 @@
+DEFINED_PHASES=install postinst prepare
+DEPEND=>=app-text/podofo-0.8.2:= >=app-text/poppler-0.20.2:=[qt4,xpdf-headers(+)] >=dev-lang/python-2.7.1:2.7[sqlite,ssl] >=dev-libs/chmlib-0.40:= >=dev-libs/icu-4.4:= >=dev-python/apsw-3.7.17[python_targets_python2_7(-)] >=dev-python/beautifulsoup-3.0.5:python-2[python_targets_python2_7(-)] dev-python/netifaces[python_targets_python2_7(-)] dev-python/python-dateutil[python_targets_python2_7(-)] >=dev-python/dnspython-1.6.0[python_targets_python2_7(-)] >=dev-python/cssselect-0.7.1[python_targets_python2_7(-)] >=dev-python/cssutils-0.9.9[python_targets_python2_7(-)] >=dev-python/dbus-python-0.82.2[python_targets_python2_7(-)] >=dev-python/lxml-3.2.1[python_targets_python2_7(-)] >=dev-python/mechanize-0.1.11[python_targets_python2_7(-)] >=dev-python/python-dateutil-1.4.1[python_targets_python2_7(-)] >=dev-python/PyQt4-4.9.6[X,svg,webkit,python_targets_python2_7(-)] dev-qt/qtdbus:4= dev-qt/qtsvg:4= media-fonts/liberation-fonts >=media-gfx/imagemagick-6.5.9[jpeg,png] >=media-libs/freetype-2:= >=media-libs/libwmf-0.2.8 >=media-libs/libmtp-1.1.5:= virtual/libusb:1= virtual/python-imaging[python_targets_python2_7(-)] >=x11-misc/xdg-utils-1.0.2-r2 >=dev-python/setuptools-0.6_rc5
+DESCRIPTION=Ebook management application
+EAPI=5
+HOMEPAGE=http://calibre-ebook.com/
+IUSE=+udisks
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3+ GPL-3 GPL-2+ GPL-2 GPL-1+ LGPL-3+ LGPL-2.1+ LGPL-2.1 BSD MIT Old-MIT Apache-2.0 public-domain || ( Artistic GPL-1+ ) CC-BY-3.0 OFL-1.1 PSF-2 unRAR
+RDEPEND=>=app-text/podofo-0.8.2:= >=app-text/poppler-0.20.2:=[qt4,xpdf-headers(+)] >=dev-lang/python-2.7.1:2.7[sqlite,ssl] >=dev-libs/chmlib-0.40:= >=dev-libs/icu-4.4:= >=dev-python/apsw-3.7.17[python_targets_python2_7(-)] >=dev-python/beautifulsoup-3.0.5:python-2[python_targets_python2_7(-)] dev-python/netifaces[python_targets_python2_7(-)] dev-python/python-dateutil[python_targets_python2_7(-)] >=dev-python/dnspython-1.6.0[python_targets_python2_7(-)] >=dev-python/cssselect-0.7.1[python_targets_python2_7(-)] >=dev-python/cssutils-0.9.9[python_targets_python2_7(-)] >=dev-python/dbus-python-0.82.2[python_targets_python2_7(-)] >=dev-python/lxml-3.2.1[python_targets_python2_7(-)] >=dev-python/mechanize-0.1.11[python_targets_python2_7(-)] >=dev-python/python-dateutil-1.4.1[python_targets_python2_7(-)] >=dev-python/PyQt4-4.9.6[X,svg,webkit,python_targets_python2_7(-)] dev-qt/qtdbus:4= dev-qt/qtsvg:4= media-fonts/liberation-fonts >=media-gfx/imagemagick-6.5.9[jpeg,png] >=media-libs/freetype-2:= >=media-libs/libwmf-0.2.8 >=media-libs/libmtp-1.1.5:= virtual/libusb:1= virtual/python-imaging[python_targets_python2_7(-)] >=x11-misc/xdg-utils-1.0.2-r2 udisks? ( || ( sys-fs/udisks:2 sys-fs/udisks:0 ) )
+SLOT=0
+SRC_URI=http://sourceforge.net/projects/calibre/files/1.37.0/calibre-1.37.0.tar.xz
+_eclasses_=bash-completion-r1	db412e427e3317ffd3e15f17df269c5e	eutils	025442f2eecab39ad0b4e541b6e142af	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=943ba33d81838d298ada0218a3c95e08
