@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/sparql-wrapper
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sparql-wrapper/ChangeLog,v 1.3 2014/04/22 04:14:49 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sparql-wrapper/ChangeLog,v 1.4 2014/05/20 14:18:04 idella4 Exp $
+
+*sparql-wrapper-1.6.0 (20 May 2014)
+
+  20 May 2014; Ian Delaney <idella4@gentoo.org> +sparql-wrapper-1.6.0.ebuild,
+  sparql-wrapper-1.5.2.ebuild:
+  bump; drop py2.6 support
 
   22 Apr 2014; Ian Delaney <idella4@gentoo.org> sparql-wrapper-1.5.2.ebuild:
   add missing DEPEND dep
